<resources>
    <string name="app_name">parbhaka-ExpBook</string>
    <string name="name"><b><i>Name</i></b></string>
    <string name="cost"><b><i>Cost</i></b></string>
    <string name="start_date"><b><i>Start</i></b></string>
    <string name="comment"><b><i>Comment</i></b></string>
    <string name="total_cost"><b><i>Total:</i></b></string>
    <string name="default_cost"><i><u>0.0</u></i></string>
    <string name="delete_message"><i><b>Long Hold to Delete Expense</b></i></string>
</resources>